# accord

./: .gitignore  README.es.md  README.md  packages.txt  pyproject.toml
accord/: __init__.py  __main__.py  commands.py  corrections.py  fileFormats.json  nel_aux.py  quantities.json
accord/sampleFiles/: config.toml
nel_calc/: __init__.py  commands.py  config_new.toml  metrology.py  nel_aux.py  trs398custom.py
nel_calc/sampleFiles/: config.toml  devices.toml
samples/: calibration.toml  config_new.toml  pdd.csv
tests/: calibration.toml  devices.toml  output0.csv  output1.csv  output2.csv  summary.json
