[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "accord"
authors = [{name = "jonjon-el"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pylinac>=3.43.2,<4.0.0",
    "numpy",    
    "scipy"
    ]

[project.urls]
Homepage = "https://github.com/jonjon-el/accord"
Source = "https://github.com/jonjon-el/accord"
Issues = "https://github.com/jonjon-el/accord/issues"

[project.scripts]
accord = "accord.__main__:main"

[tool.flit.module]
name = "accord"

# [tool.flit.sdist]
# include = ["accord/config_new.toml"]